--- a/src/app/components/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/admin-navbar/admin-navbar.component.html
@@ -14,18 +14,18 @@
     </button>
     <div class="collapse navbar-collapse" id="adminNavbar">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item dropdown" *ngFor="let dropdown of dropdowns">
+        <li class="nav-item dropdown" *ngFor="let dropdown of dropdowns; let i = index">
           <a
             class="nav-link dropdown-toggle"
             href="#"
-            id="navbarDropdown"
+            [id]="'adminNavbarDropdown-' + i"
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
             {{ dropdown.title }}
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <ul class="dropdown-menu" [attr.aria-labelledby]="'adminNavbarDropdown-' + i">
             <li *ngFor="let link of dropdown.links">
               <a
                 *ngIf="link.isExternal"
