--- a/src/app/modules/companies/components/recent-reviews/recent-reviews-page.component.html
+++ b/src/app/modules/companies/components/recent-reviews/recent-reviews-page.component.html
@@ -68,8 +68,10 @@
           <img
             src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/company_reviews_1000.png"
             class="img-fluid mobile-w-30"
-            alt="logo"
+            alt="Кот Магеллан — загрузка списка отзывов"
             title="Кот Магеллан, который любит оставлять отзывы о компаниях"
+            width="1000"
+            height="1000"
           />
         </div>
       </div>
