--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -24,11 +24,11 @@
       id="navbarSupportedContent"
     >
       <ul class="navbar-nav mb-2 mb-md-0 align-items-center">
-        <li class="nav-item dropdown" *ngFor="let dropdown of dropdowns">
+        <li class="nav-item dropdown" *ngFor="let dropdown of dropdowns; let i = index">
           <a
             class="nav-link dropdown-toggle"
             href="#"
-            id="navbarDropdown"
+            [id]="'navbarDropdown-' + i"
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
@@ -36,7 +36,7 @@
           >
             {{ dropdown.title }}
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <ul class="dropdown-menu" [attr.aria-labelledby]="'navbarDropdown-' + i">
             <li *ngFor="let link of dropdown.links">
               <a
                 class="dropdown-item"
@@ -83,7 +83,7 @@
             <a
               class="nav-link dropdown-toggle"
               href="#"
-              id="navbarDropdown"
+              id="navbarDropdownUser"
               role="button"
               data-bs-toggle="dropdown"
               aria-expanded="false"
@@ -92,7 +92,7 @@
             </a>
             <ul
               class="dropdown-menu dropdown-menu-end"
-              aria-labelledby="navbarDropdown"
+              aria-labelledby="navbarDropdownUser"
             >
               <li><a class="dropdown-item" routerLink="/me">Мой профиль</a></li>
               <li>
