--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -8,7 +8,7 @@
           <div class="mb-3 uwu-image" *ngIf="uwuImageLink">
             <img src="{{ uwuImageLink }}" alt="UwU" class="img-fluid" />
           </div>
-          <div class="display-1 uwu-title">Зарплаты в IT</div>
+          <h1 class="display-1 uwu-title">Зарплаты в IT</h1>
         </div>
       </div>
     </div>
@@ -46,7 +46,9 @@
           <img
             class="img-fluid feature-image"
             src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_transparent_1000.png"
-            alt="Main"
+            alt="Графики и статистика зарплат в IT"
+            width="1000"
+            height="1000"
           />
         </div>
       </div>
@@ -79,7 +81,10 @@
           <img
             class="img-fluid feature-image"
             src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/company_reviews_1000.png"
-            alt="Main"
+            alt="Отзывы о компаниях в IT"
+            width="1000"
+            height="1000"
+            loading="lazy"
           />
         </div>
       </div>
@@ -111,7 +116,10 @@
           <img
             class="img-fluid feature-image"
             src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_interview_transparent_1000.png"
-            alt="Main"
+            alt="Заметки к техническим интервью"
+            width="1000"
+            height="1000"
+            loading="lazy"
           />
         </div>
       </div>
@@ -158,7 +166,7 @@
 <ng-template #noUwu>
   <div class="no-uwu-content">
     <div class="mt-3 mb-1 text-center">
-      <div class="website-title">Techinterview.space</div>
+      <h1 class="website-title">Techinterview.space</h1>
       <div class="website-subtitle">
         Зарплаты в IT, отзывы, заметки к техническим интервью.
       </div>
@@ -167,8 +175,10 @@
     <div class="pt-1 d-flex justify-content-center">
       <img
         src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_transparent_1000.png"
-        alt="Interviewer"
+        alt="Techinterview.space — зарплаты в IT, отзывы и заметки к интервью"
         class="website-image"
+        width="1000"
+        height="1000"
       />
     </div>
   </div>
