--- a/src/app/shared/components/app-page-header/app-page-header.component.html
+++ b/src/app/shared/components/app-page-header/app-page-header.component.html
@@ -1,3 +1,5 @@
-<div class="container mt-3 mb-5 display-3">
-  <ng-content></ng-content>
+<div class="container mt-3 mb-5">
+  <h1 class="display-3">
+    <ng-content></ng-content>
+  </h1>
 </div>
