--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,6 +5,8 @@
         class="me-1 img-fluid logo-image no-dim"
         src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/cat_logo.png"
         alt="Techinterview.space logo"
+        width="30"
+        height="30"
       />
       <span>Techinterview.space</span></a
     >
