--- a/src/app/modules/companies/components/companies-page/companies-page.component.html
+++ b/src/app/modules/companies/components/companies-page/companies-page.component.html
@@ -6,7 +6,9 @@
       <div class="company-list mb-3">
         <div class="row">
           <div class="col-md-6 mb-1">
-            <label for="searchQuery" class="visually-hidden">Поиск компании</label>
+            <label for="searchQuery" class="visually-hidden"
+              >Поиск компании</label
+            >
             <input
               type="text"
               placeholder="Поиск. Минимум {{ MIN_SEARCH_QUERY_LENGTH }} символа"
@@ -19,7 +21,9 @@
           </div>
           <div class="col-md-3 mb-1">
             <div class="">
-              <label for="withRating" class="visually-hidden">Фильтр по рейтингу</label>
+              <label for="withRating" class="visually-hidden"
+                >Фильтр по рейтингу</label
+              >
               <select
                 class="form-select"
                 id="withRating"
@@ -53,7 +57,11 @@
         </div>
         <div class="small text-muted mt-2">
           Если нужной компании нет в списке, напишите в тг
-          <a class="tg-link" href="https://t.me/maximgorbatyuk" target="_blank" rel="noopener noreferrer"
+          <a
+            class="tg-link"
+            href="https://t.me/maximgorbatyuk"
+            target="_blank"
+            rel="noopener noreferrer"
             >&#64;maximgorbatyuk</a
           >, и она будет добавлена
         </div>
