--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -521,7 +521,7 @@
 ></app-edit-salary-modal>
 
 <ng-template #dataLoading>
-  <div class="container mt-5 mb-5">
+  <div class="container mt-5 mb-5 route-loading-shell">
     <app-data-loader [title]="''" />
   </div>
 </ng-template>
