--- a/src/app/modules/salaries/components/salaries-chart/salary-block-value/salary-block-value.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salary-block-value/salary-block-value.component.html
@@ -43,6 +43,10 @@
       class="img-fluid cat-image"
       alt="logo"
       title="Кот Магеллан, который любит считать деньги"
+      width="1297"
+      height="1703"
+      decoding="async"
+      loading="eager"
     />
   </div>
 </div>
