--- a/src/app/modules/salaries/components/salaries-chart/salary-block-value/salary-block-value.component.scss
+++ b/src/app/modules/salaries/components/salaries-chart/salary-block-value/salary-block-value.component.scss
@@ -1,4 +1,8 @@
 .cat-image {
+  width: 100%;
+  max-width: 338px;
+  aspect-ratio: 1297 / 1703;
+  object-fit: contain;
   transition: transform 0.3s ease;
 
   &:hover {
