--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -2,9 +2,7 @@
   <div class="container">
     <div *ngIf="loaded; else notLoaded">
       <div *ngIf="showUwu; else noUwu" class="pt-5">
-        <div
-          class="d-flex flex-column justify-content-center align-items-center"
-        >
+        <div class="d-flex flex-column justify-content-center align-items-center">
           <div class="mb-3 uwu-image" *ngIf="uwuImageLink">
             <img src="{{ uwuImageLink }}" alt="UwU" class="img-fluid" />
           </div>
@@ -35,29 +33,18 @@
             &mdash; посмотри в собранной статистике.
           </div>
           <div class="mt-5">
-            <a routerLink="/salaries" class="btn btn-huge btn-purple"
-              >Перейти к зарплатам</a
-            >
+            <a routerLink="/salaries" class="btn btn-huge btn-purple">Перейти к зарплатам</a>
           </div>
         </div>
         <div
-          class="col-md-5 d-flex align-items-center justify-content-center align-items-md-end justify-content-md-end"
-        >
-          <img
-            class="img-fluid feature-image"
-            src="/assets/img/home/main_charts_transparent_800.png"
-            srcset="
-              /assets/img/home/main_charts_transparent_480.png 480w,
-              /assets/img/home/main_charts_transparent_800.png 800w,
+          class="col-md-5 d-flex align-items-center justify-content-center align-items-md-end justify-content-md-end">
+          <img class="img-fluid feature-image"
+            src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_transparent_800.png" srcset="
+              https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_transparent_480.png 480w,
+              https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_transparent_800.png 800w,
               https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_transparent_1000.png 1000w
-            "
-            sizes="(max-width: 768px) 100vw, 40vw"
-            alt="Графики и статистика зарплат в IT"
-            width="1000"
-            height="1000"
-            loading="eager"
-            decoding="async"
-          />
+            " sizes="(max-width: 768px) 100vw, 40vw" alt="Графики и статистика зарплат в IT" width="1000" height="1000"
+            loading="eager" decoding="async" />
         </div>
       </div>
     </div>
@@ -77,30 +64,19 @@
             оффер? Тебе сюда.
           </div>
           <div class="mt-5">
-            <a routerLink="/companies" class="btn btn-huge btn-outline-success"
-              >Перейти к списку компаний</a
-            >
+            <a routerLink="/companies" class="btn btn-huge btn-outline-success">Перейти к списку компаний</a>
           </div>
         </div>
 
         <div
-          class="col-md-5 d-flex align-items-center justify-content-center align-items-md-end justify-content-md-end"
-        >
-          <img
-            class="img-fluid feature-image"
-            src="/assets/img/home/company_reviews_800.png"
-            srcset="
-              /assets/img/home/company_reviews_480.png 480w,
-              /assets/img/home/company_reviews_800.png 800w,
+          class="col-md-5 d-flex align-items-center justify-content-center align-items-md-end justify-content-md-end">
+          <img class="img-fluid feature-image"
+            src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/company_reviews_800.png" srcset="
+              https://techinterview.fra1.cdn.digitaloceanspaces.com/images/company_reviews_480.png 480w,
+              https://techinterview.fra1.cdn.digitaloceanspaces.com/images/company_reviews_800.png 800w,
               https://techinterview.fra1.cdn.digitaloceanspaces.com/images/company_reviews_1000.png 1000w
-            "
-            sizes="(max-width: 768px) 100vw, 40vw"
-            alt="Отзывы о компаниях в IT"
-            width="1000"
-            height="1000"
-            loading="lazy"
-            decoding="async"
-          />
+            " sizes="(max-width: 768px) 100vw, 40vw" alt="Отзывы о компаниях в IT" width="1000" height="1000"
+            loading="lazy" decoding="async" />
         </div>
       </div>
     </div>
@@ -119,30 +95,20 @@
             тебе сюда.
           </div>
           <div class="mt-5">
-            <a routerLink="/interviews" class="btn btn-huge btn-outline-primary"
-              >Перейти к заметкам</a
-            >
+            <a routerLink="/interviews" class="btn btn-huge btn-outline-primary">Перейти к заметкам</a>
           </div>
         </div>
 
         <div
-          class="col-md-5 d-flex align-items-center justify-content-center align-items-md-end justify-content-md-end"
-        >
-          <img
-            class="img-fluid feature-image"
-            src="/assets/img/home/main_interview_transparent_800.png"
+          class="col-md-5 d-flex align-items-center justify-content-center align-items-md-end justify-content-md-end">
+          <img class="img-fluid feature-image"
+            src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_interview_transparent_800.png"
             srcset="
-              /assets/img/home/main_interview_transparent_480.png 480w,
-              /assets/img/home/main_interview_transparent_800.png 800w,
+              https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_interview_transparent_480.png 480w,
+              https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_interview_transparent_800.png 800w,
               https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_interview_transparent_1000.png 1000w
-            "
-            sizes="(max-width: 768px) 100vw, 40vw"
-            alt="Заметки к техническим интервью"
-            width="1000"
-            height="1000"
-            loading="lazy"
-            decoding="async"
-          />
+            " sizes="(max-width: 768px) 100vw, 40vw" alt="Заметки к техническим интервью" width="1000" height="1000"
+            loading="lazy" decoding="async" />
         </div>
       </div>
     </div>
@@ -163,23 +129,13 @@
         ниже. Мы благодарны любой помощи.
       </div>
       <div class="mb-5 mt-3">
-        <a
-          href="https://github.com/orgs/Techinterview-space/repositories"
-          class="me-3 mb-2 btn btn-lg btn-outline-dark"
-          rel="noopener noreferrer"
-          target="_blank"
-        >
-          <i class="bi bi-github me-2"></i>Исходный код</a
-        >
+        <a href="https://github.com/orgs/Techinterview-space/repositories" class="me-3 mb-2 btn btn-lg btn-outline-dark"
+          rel="noopener noreferrer" target="_blank">
+          <i class="bi bi-github me-2"></i>Исходный код</a>
 
-        <a
-          href="https://boosty.to/ake111aa"
-          rel="noopener noreferrer"
-          class="me-3 mb-2 btn btn-lg btn-outline-dark"
-          target="_blank"
-        >
-          <i class="bi bi-cash-coin me-2"></i>Поддержать на Boosty</a
-        >
+        <a href="https://boosty.to/ake111aa" rel="noopener noreferrer" class="me-3 mb-2 btn btn-lg btn-outline-dark"
+          target="_blank">
+          <i class="bi bi-cash-coin me-2"></i>Поддержать на Boosty</a>
       </div>
     </div>
   </div>
@@ -195,22 +151,12 @@
     </div>
 
     <div class="pt-1 d-flex justify-content-center">
-      <img
-        src="/assets/img/home/main_transparent_800.png"
-        srcset="
-          /assets/img/home/main_transparent_480.png 480w,
-          /assets/img/home/main_transparent_800.png 800w,
+      <img src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_transparent_800.png" srcset="
+          https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_transparent_480.png 480w,
+          https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_transparent_800.png 800w,
           https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_transparent_1000.png 1000w
-        "
-        sizes="(max-width: 768px) 100vw, 65vw"
-        alt="Techinterview.space — зарплаты в IT, отзывы и заметки к интервью"
-        class="website-image"
-        width="1000"
-        height="1000"
-        loading="eager"
-        fetchpriority="high"
-        decoding="async"
-      />
+        " sizes="(max-width: 768px) 100vw, 65vw" alt="Techinterview.space — зарплаты в IT, отзывы и заметки к интервью"
+        class="website-image" width="1000" height="1000" loading="eager" fetchpriority="high" decoding="async" />
     </div>
   </div>
 </ng-template>
