--- a/src/app/modules/surveys/components/survey-results-page/survey-results-page.component.html
+++ b/src/app/modules/surveys/components/survey-results-page/survey-results-page.component.html
@@ -19,7 +19,7 @@
 
   <div class="container mt-5 mb-5">
     <div class="row justify-content-center">
-      <div class="col-md-10">
+      <div class="col-md-12">
         <!-- Header with share -->
         <div class="d-flex align-items-center justify-content-between mb-4">
           <div>
@@ -28,19 +28,13 @@
             </span>
           </div>
           <div class="d-flex gap-2">
-            <button
-              class="btn btn-outline-primary btn-sm"
-              (click)="copyLink()"
+            <button class="btn btn-outline-primary btn-sm" (click)="copyLink()"
               [attr.aria-label]="linkCopied ? 'Ссылка скопирована' : 'Скопировать ссылку на опрос'"
-              [title]="linkCopied ? 'Скопировано!' : 'Скопировать ссылку на опрос'"
-            >
+              [title]="linkCopied ? 'Скопировано!' : 'Скопировать ссылку на опрос'">
               <i class="bi" [ngClass]="linkCopied ? 'bi-check-lg' : 'bi-share'" aria-hidden="true"></i>
               {{ linkCopied ? 'Скопировано' : 'Поделиться' }}
             </button>
-            <a
-              [routerLink]="['/surveys', survey.slug]"
-              class="btn btn-outline-secondary btn-sm"
-            >
+            <a [routerLink]="['/surveys', survey.slug]" class="btn btn-outline-secondary btn-sm">
               <i class="bi bi-arrow-left" aria-hidden="true"></i> К опросу
             </a>
           </div>
@@ -84,6 +78,12 @@
               </div>
             </div>
           </div>
+        </div>
+
+        <div class="mt-4">
+          <a routerLink="/surveys/public" class="btn btn-outline-primary">
+            <i class="bi bi-list-ul" aria-hidden="true"></i> Все публичные опросы
+          </a>
         </div>
       </div>
     </div>
