--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.scss
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.scss
@@ -12,6 +12,7 @@
   min-height: 70vh;
   display: flex;
   align-items: flex-start;
+  justify-content: center;
 }
 
 // ─────────────────────────────────────────────────────────────────────────────────
